Various minor changes
Did some testing and figured out several limits relating to Coins and Star Bits spawning. Also some Meramera stuff, including the fact that they can destroy CRYSTALS!!??

--- a/data/configs/BegomanLauncher.json
+++ b/data/configs/BegomanLauncher.json
@@ -15,7 +15,7 @@
             "Exclusives": []
         },
         "Obj_arg3": {
-            "Name": "Number of Topman",
+            "Name": "Number of Topmen",
             "Type": "Integer",
             "Games": 3,
             "Needed": false,
